hphp/test/zend/good/ext/calendar/tests/jdtounix.php
<?php
echo date("Y-m-d",jdtounix(2440588)). "\n";
echo date("Y-m-d",jdtounix(2452162)). "\n";
echo date("Y-m-d",jdtounix(2453926)). "\n";
?>